--- a/html/curso1/form.htm
+++ b/html/curso1/form.htm
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>meur primeiro htm</title>
+    <title>Contato</title>
 </head>
 <body>
-    <h1>teste de pagina</h1>
-    <a href="estrutura.htm">Estrutura</a>
-
     
 </body>
 </html>
